--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@hookform/resolvers": "^3.10.0",
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
+    "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.51.11",
     "@tanstack/react-query-devtools": "^5.51.11",
     "@tippyjs/react": "^4.2.6",
@@ -32,21 +33,27 @@
     "aos": "^2.3.4",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
+    "fa": "^1.0.1",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
     "react-date-range": "^2.0.1",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.25.1",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.12",
+    "swiper": "^11.2.3",
     "tippy.js": "^6.3.7",
     "uuid": "^10.0.0",
+    "yarn": "^1.22.22",
     "yup": "^1.6.1"
   },
   "devDependencies": {
@@ -60,7 +67,7 @@
     "@typescript-eslint/parser": "^7.17.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
-    "eslint": "^9.7.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.9.0",
