--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "fa": "^1.0.1",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
